# kura

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  test_tutorial.py
.github/workflows/: pyright.yml  pytest.yml  ruff.yml
docs/: index.md  troubleshooting.md
docs/api/: index.md
docs/core-concepts/: clustering.md  conversations.md  embedding.md  meta-clustering.md  overview.md  summarization.md
kura/: __init__.py  cluster.py  dimensionality.py  kura.py  meta_cluster.py  metadata.py  summarisation.py  visualization.py
kura/explorer/backend/: .coverage  API.md  Dockerfile  README.md  TEST_SUMMARY.md  __init__.py  extract_openapi.py  main.py  models.py  openapi.json  pyproject.toml  requirements.txt  run_integration_tests.sh  run_tests.sh  test_api.py
kura/explorer/backend/debug_scripts/: README.md  analyze_all_clusters.py  analyze_clustering.py  clustering_quality_report.py  test_cluster_debug.py
kura/explorer/backend/routers/: __init__.py  clusters.py  conversations.py  insights.py  search.py
kura/explorer/backend/tests/: README.md  __init__.py  conftest.py  test_cluster_conversation_relationship.py  test_clusters.py  test_conversations.py  test_database_integrity.py  test_insights.py  test_integration_clusters.py  test_main.py  test_runner.py  test_search.py
scripts/: build_docs.sh
tests/: test_candidate_clusters.py  test_cluster_label.py  test_cluster_label_extended.py  test_cluster_models_standalone.py  test_meta_cluster.py  test_metadata.py
tutorial_test/: test_tutorial.py  tutorial.py
ui/: bun.lockb
(+78 files in other folders)
