[project]
name = "kura-explorer-backend"
version = "0.1.0"
description = "Backend API for Kura Explorer"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlmodel==0.0.22",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "aiofiles==24.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]